Minor layout bug fixed for Mobile devices

--- a/src/Components/Common/Footer/style.css
+++ b/src/Components/Common/Footer/style.css
@@ -63,9 +63,11 @@ footer p {
   font-size: 1.5rem;
 }
 
-
 @media (max-width: 576px) {
   footer p {
+    font-size: 0.7rem;
+  }
+  .social-icon{
     font-size: 0.8rem;
   }
 }
