--- a/src/Pages/Home/Banner/style.css
+++ b/src/Pages/Home/Banner/style.css
@@ -45,6 +45,7 @@ header img {
   font-weight: 500;
   margin-top: 0.5rem;
   font-family: "Nunito";
+  font-size: large;
 }
 
 @media (max-width: 768px) {
@@ -60,5 +61,26 @@ header img {
     width: 150px;
     padding: .5rem 1rem;
     margin-top: 1.5rem;
+  }
+}
+
+.text-effect {
+  cursor: pointer;
+  background: linear-gradient(45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: animate 2s ease-in-out infinite;
+}
+
+@keyframes animate {
+  0% {
+    background-position: 0 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0 50%;
   }
 }
